--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -2,9 +2,8 @@ name: Automated Commit and Push
 
 on:
   schedule:
-#    - cron: '0 2 * * *'  # Runs at 2 AM UTC daily
-#     - cron: '*/5 * * * *'  # Runs every 5 minutes
-     # - cron: '0 */5 * * *'  # Runs every 5 hours
+    - cron: '0 */5 * * *'  # Runs every 5 hours
+
 jobs:
   commit:
     runs-on: ubuntu-latest
@@ -25,7 +24,11 @@ jobs:
     - name: Commit and Push changes
       run: |
         git add last_updated.txt
-        git commit -m "Automated commit to preserve contribution history"
-        git push origin main
+        if git diff-index --quiet HEAD; then
+          echo "No changes to commit"
+        else
+          git commit -m "Automated commit to preserve contribution history"
+          git push origin main
+        fi
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
