--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -27,7 +27,7 @@ jobs:
         if git diff-index --quiet HEAD; then
           echo "No changes to commit"
         else
-          git commit -m "Automated commit to preserve contribution history"
+          git commit -m "check"
           git push origin main
         fi
       env:
