--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ debugpy==1.8.6
 decorator==5.1.1
 executing==2.1.0
 Flask==3.0.3
+Flask-Cors==5.0.0
 fonttools==4.53.1
 gunicorn==23.0.0
 idna==3.7
