--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.3
 appnope==0.1.4
 asttokens==2.4.1
 bleach==6.1.0
@@ -5,11 +6,13 @@ blinker==1.8.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
+colorlog==6.8.2
 comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
 debugpy==1.8.6
 decorator==5.1.1
+et-xmlfile==1.1.0
 executing==2.1.0
 Flask==3.0.3
 Flask-Cors==5.0.0
@@ -29,11 +32,14 @@ jupyter_core==5.7.2
 kaggle==1.6.17
 kiwisolver==1.4.5
 lightgbm==4.5.0
+Mako==1.3.5
 MarkupSafe==2.1.5
 matplotlib==3.9.1
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
 numpy==2.0.1
+openpyxl==3.1.5
+optuna==4.0.0
 packaging==24.1
 pandas==2.2.2
 parso==0.8.4
@@ -50,18 +56,21 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-slugify==8.0.4
 pytz==2024.1
+PyYAML==6.0.2
 pyzmq==26.2.0
 requests==2.32.3
 scikit-learn==1.5.1
 scipy==1.14.0
 seaborn==0.13.2
 six==1.16.0
+SQLAlchemy==2.0.35
 stack-data==0.6.3
 text-unidecode==1.3
 threadpoolctl==3.5.0
 tornado==6.4.1
 tqdm==4.66.4
 traitlets==5.14.3
+typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 wcwidth==0.2.13
